# anid-rendiciones

./: .gitignore  LICENSE  README.md  pyproject.toml
rules/concurso/: fondecyt_regular_2022plus.yaml
rules/general/: rex_7_2026.yaml
src/anid_rendiciones/: __init__.py  advisor.py  app.py  classify.py  cli.py  extract.py  schema.py  skill_cli.py  state.py  validate.py
src/anid_rendiciones/generate/: __init__.py  anexo1.py
templates/anid_2026/: Anexo_N1_Formulario_de_Rendicion.xls
tests/: test_state.py  test_validation.py
